# dark-factory

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  PLAN.md  PROGRESS.md  README.md  RESEARCH.md  SECURITY.md  TASKS.md
.githooks/: quality-gates
.githooks/pre-push.d/: 10-complexity-gate  20-clean-branch  30-coverage-gate
.githooks/pre-rebase.d/: 01-check-clean-state
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  false_positive.yml  pattern_submission.yml
.github/wiki/: CONVENTIONS.md  COVERAGE_GUIDE.md  GETTING_STARTED.md  PATTERN_DEVELOPMENT.md  SETUP_GUIDE.md  TEMPLATE_USAGE.md  TROUBLESHOOTING.md
.github/workflows/: always.yml  auto-merge.yml  benchmark.yml  ci.yml  dev-testing.yml  integration.yml  python-ci.yml  release.yml  security.yml  setup-repo.yml  wiki.yml
docs/: ARCHITECTURE.md  BRANCH_STRATEGY.md  HOOKS.md  PROGRESS.md  SECURITY.md  TASKS.md  TESTING_STRATEGY.md
docs/planning/: AUDIT.md  PHASE2_PLAN.md  ROADMAP.md  SDLC.md
scripts/: install-hooks.sh  setup-repo.sh
scripts/hooks/: pre-commit  pre-push
template-parts/: README.md
template-parts/atheon-enhanced/: README.md
template-parts/code-library/: README.md
template-parts/common/: AGENTS.md  CLAUDE.md  Dockerfile  docker-compose.yml
template-parts/common/.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
template-parts/e2e-testing/: playwright.config.ts  runner.sh
template-parts/e2e-testing/framework/: ai_coverage.go  debugger.go  harness.go  reporter.go  session.go
template-parts/go/: .golangci.yml  Makefile  README.md  go.mod
template-parts/go/_fixtures/: example_test.go
template-parts/python/: .ruff.toml  Makefile  README.md  pyproject.toml
template-parts/python/docs/: API.md
template-parts/python/scripts/: run-e2e.sh
template-parts/python/src/project_name/: __init__.py  config.py  errors.py
template-parts/python/src/project_name/utils/: logging.py
template-parts/python/tests/: conftest.py
template-parts/python/tests/e2e/: test_flows.py
template-parts/python/tests/integration/: test_api.py
template-parts/python/tests/unit/: test_business.py
template-parts/rust/: .clippy.toml  Cargo.toml  Makefile  README.md  rustfmt.toml
template-parts/rust/src/: lib.rs
template-parts/rust/src/api/: handlers.rs  mod.rs
template-parts/rust/src/models/: mod.rs  types.rs
template-parts/rust/src/services/: business.rs  mod.rs
template-parts/rust/src/utils/: logging.rs  mod.rs
template-parts/rust/tests/integration/: api_test.rs
template-parts/rust/tests/unit/: business_test.rs
template-parts/scaffolding/api-service/: Dockerfile  Makefile  README.md  docker-compose.yml  go.mod
template-parts/scaffolding/cli-tool/: Dockerfile  Makefile  README.md
template-parts/typescript/: .eslintrc.json  .prettierrc  Makefile  README.md  package.json  tsconfig.json  vitest.config.ts
template-parts/vite-react-pwa/: .prettierignore  README.md  eslint.config.js  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
template-parts/vite-ssr/: .env.example  README.md  eslint.config.js  package.json  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.server.ts  vite.config.ts  vitest.config.ts
template-parts/vite-ssr/src/: main.ts  (+4 more)
(+131 files in other folders)
