[package]
name = "project_name"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
axum-test = "15"
tokio-test = "0.4"
serial_test = "3"

[[test]]
name = "unit"
path = "tests/unit/business_test.rs"

[[test]]
name = "integration"
path = "tests/integration/api_test.rs"
